--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,10 @@ web_modules/
 .env.production.local
 .env.local
 
+
+# config environment variables file
+development.json
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
