--- a/play-http-server/package.json
+++ b/play-http-server/package.json
@@ -6,11 +6,14 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon --env-file=.env server.js"
   },
   "author": "IMxSuhasTheBoy",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.1.0"
+  },
+  "dependencies": {
+    "config": "^3.3.11"
   }
 }
