--- a/play-http-server/package.json
+++ b/play-http-server/package.json
@@ -2,11 +2,11 @@
   "name": "play-http-server",
   "version": "1.0.0",
   "description": "node testing native stuff maan http server",
-  "main": "server.js",
+  "main": "server2.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon --env-file=.env server.js"
+    "start": "node server2.js",
+    "dev": "nodemon --env-file=.env server2.js"
   },
   "author": "IMxSuhasTheBoy",
   "license": "ISC",
